# superstore-sample

./: README.md  pyproject.toml
.github/workflows/: pylint.yml
notebooks/: EDA.ipynb
src/: main.py  utils.py
tests/: test_utils.py
