[tool.poetry]
name = "superstore-sample"
version = "0.1.0"
description = "Just a sample ML"
authors = ["Matthew Bargstadt <matthew.bargstadt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
