[tool.poetry]
name = "superstore-sample"
version = "0.1.0"
description = "Just a sample ML"
authors = ["Matthew Bargstadt <matthew.bargstadt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.5"
pandas = "^2.1.4"

[tool.poetry.group.dev.dependencies]
jupyterlab = "4.0.11"

[tool.poetry.group.test.dependencies]
pytest = "7.4.4"
pytest-mock = "3.12.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
